--- a/data/applications.json
+++ b/data/applications.json
@@ -11,5 +11,30 @@
             790232461052608554,
             915670836357247006
         ]
+    },
+    "1062067438113538118": {
+        "applicant": 915670836357247006,
+        "name": "DillonB07#2167",
+        "application": "test",
+        "replit": "test",
+        "github": "test",
+        "votes": 0,
+        "voters": [],
+        "locked": false
+    },
+    "1065137126120882188": {
+        "applicant": 610788461028573194,
+        "name": "ErikoX#7564",
+        "application": "Hello, I'm ErikoXDev. I'd like to join the collab because it sounds fun! I mainly use Javascript, Next.js, Tailwind or Kaboom.js. My projects can be found here: https://eriko.dev",
+        "replit": "ErikoXDev",
+        "github": "ErikoXDev",
+        "votes": 4,
+        "voters": [
+            915670836357247006,
+            658650587679948820,
+            660229063142539306,
+            790232461052608554
+        ],
+        "locked": true
     }
 }
